--- a/source/index_vn_ver2.html
+++ b/source/index_vn_ver2.html
@@ -490,24 +490,44 @@ VinaCapital<br />
                 <td align="center" style="background-color: #EFEDED"><table border="0" cellpadding="0" cellspacing="0" class="chs_body1">
                     <tr>
                       <td height="5">&nbsp;</td>
-                      <td width="10" height="5">&nbsp;</td>
-                      <td width="10" height="5">&nbsp;</td>
-                      <td height="5">&nbsp;</td>
-                      <td height="5">&nbsp;</td>
                     </tr>
                     <tr>
-                      <td align="right" style="word-wrap: break-all"><p style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #6b0f1c">Truy cập&nbsp;<a href="https://www.hsbc.com.vn/" target="_blank" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; text-decoration: none; color: #6b0f1c; font-family: Arial, Helvetica, sans-serif !important;"><strong style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">hsbc.com.vn</strong></a></p>
-                        <p style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_facebook_logo.png" width="12" style="vertical-align:middle;" /><a href="https://www.facebook.com/hsbcvietnam" target="_blank" title="Liên kết này có thể cho Quý khách truy cập đến trang web khác không phải của HSBC. Ngân hàng TNHH Một thành viên HSBC (Việt Nam) không có quyền kiểm soát các trang web liên kết này và không chịu trách nhiệm đối với việc kết nối của Quý khách. Vui lòng tham khảo Chính sách liên kết" style="padding: 0; margin: 0; border: none; line-height: 1.3; text-decoration: none; color: black; font-size: 16px; word-break: break-all; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;www.facebook.com/HSBCVietnam</a></p></td>
-                      <td width="10" style="border-right: 1px solid #6b0f1c;">&nbsp;</td>
-                      <td width="10" style="border-left: 1px solid #6b0f1c;">&nbsp;</td>
-                      <td class="default text" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">Gọi&nbsp;</td>
-                      <td class="default text" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><strong style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; color: #6b0f1c; font-family: Arial, Helvetica, sans-serif !important;">(84 28) 37 247 666</strong></td>
+                      <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><!--------- START CTA VI -------->
+
+                        <table width="100%" border="0" cellspacing="0" cellpadding="0" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">
+                          <tr>
+                            <td align="right" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000; border-right: 2px solid #6b0f1c"><table border="0" cellpadding="0" cellspacing="0" class="chs_body">
+                                <tr>
+                                  <td align="right" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">Truy cập<strong> <a style="text-decoration:none;color:#6b0f1c;" href="https://www.hsbc.com.vn"
+										  target="_blank">hsbc.com.vn</a></strong></td>
+                                  <td width="10">&nbsp;</td>
+                                </tr>
+                                <tr>
+                                  <td align="right" valign="top" style="padding-top: 0px;"><img src="image/chs_facebook_logo.png" width="12" height="12" />&nbsp;<a href="https://www.facebook.com/hsbcvietnam" title="Liên kết này có thể cho Quý khách truy cập đến trang web khác không phải của HSBC. Ngân hàng TNHH Một thành viên HSBC (Việt Nam) không có quyền kiểm soát các trang web liên kết này và không chịu trách nhiệm đối với việc kết nối của Quý khách. Vui lòng tham khảo Chính sách liên kết"
+										target="_blank" style="color:#252525;text-decoration:none;font-size:12px;">www.facebook.com/HSBCVietnam</a></td>
+                                  <td>&nbsp;</td>
+                                </tr>
+                              </table></td>
+                            <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table border="0" cellpadding="0" cellspacing="0" class="chs_body">
+                                <tr>
+                                  <td width="10">&nbsp;</td>
+                                  <td width="40" valign="top">Gọi</td>
+                                  <td valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><strong style="color: #6b0f1c">(84 28) 37 247 247</strong> (miền Nam)</td>
+                                </tr>
+                                <tr>
+                                  <td>&nbsp;</td>
+                                  <td style=" font-size: 16px;" valign="top">hoặc </td>
+                                  <td valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><strong style="color: #6b0f1c">(84 24) 62 707 707</strong> (miền Bắc)</td>
+                                </tr>
+                              </table></td>
+                          </tr>
+                        </table>
+
+                        <!----------------------- END CTA VI ----------------------->
+                        <!----------------------- START CTA EN ----------------------->
+                        <!--------------- END CTA EN ---------------></td>
                     </tr>
                     <tr>
-                      <td height="5">&nbsp;</td>
-                      <td width="10" height="5">&nbsp;</td>
-                      <td width="10" height="5">&nbsp;</td>
-                      <td height="5">&nbsp;</td>
                       <td height="5">&nbsp;</td>
                     </tr>
                   </table></td>
