--- a/source/index_vn_1_ver2.html
+++ b/source/index_vn_1_ver2.html
@@ -434,9 +434,9 @@ VinaCapital<br />
 
                         <table width="100%" border="0" cellspacing="0" cellpadding="0" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">
                           <tr>
-                            <td align="right" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000; border-right: 2px solid #6b0f1c"><table border="0" cellpadding="0" cellspacing="0" class="chs_body">
+                            <td align="right" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000; border-right: 2px solid #db0011"><table border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                 <tr>
-                                  <td align="right" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">Truy cập<strong> <a style="text-decoration:none;color:#6b0f1c;" href="https://www.hsbc.com.vn"
+                                  <td align="right" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">Truy cập<strong> <a style="text-decoration:none;color:#db0011;" href="https://www.hsbc.com.vn"
 										  target="_blank">hsbc.com.vn</a></strong></td>
                                   <td width="10">&nbsp;</td>
                                 </tr>
@@ -450,12 +450,12 @@ VinaCapital<br />
                                 <tr>
                                   <td width="10">&nbsp;</td>
                                   <td width="40" valign="top">Gọi</td>
-                                  <td valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><strong style="color: #6b0f1c">(84 28) 37 247 247</strong> (miền Nam)</td>
+                                  <td valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><strong style="color: #db0011">(84 28) 37 247 247</strong> (miền Nam)</td>
                                 </tr>
                                 <tr>
                                   <td>&nbsp;</td>
                                   <td style=" font-size: 16px;" valign="top">hoặc </td>
-                                  <td valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><strong style="color: #6b0f1c">(84 24) 62 707 707</strong> (miền Bắc)</td>
+                                  <td valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><strong style="color: #db0011">(84 24) 62 707 707</strong> (miền Bắc)</td>
                                 </tr>
                               </table></td>
                           </tr>
