--- a/source/index_vn_1_ver2.html
+++ b/source/index_vn_1_ver2.html
@@ -121,7 +121,7 @@
                       <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
                     </tr>
                     <tr>
-                      <td align="left" style="padding: 0 0 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Thứ 5, ngày 01/12/2022, 17:30 - 19:00</td>
+                      <td align="left" style="padding: 0 0 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Thứ 5, ngày 01/12/2022, 17:30 - 18:30</td>
                     </tr>
                     <tr>
                       <td height="28" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
@@ -149,7 +149,7 @@
                       <td height="28" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;">&nbsp;</td>
                     </tr>
                     <tr>
-                      <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>17:30 - 17:45</strong></td>
+                      <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>17:30 - 17:35</strong></td>
                     </tr>
                     <tr>
                       <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Khai mạc và phát biểu chào mừng từ đại diện<br />
@@ -162,31 +162,19 @@
                       <td align="center" style="padding: 0 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 						  <tr>
 							  <td width="265" align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><img src="image/chs_box_1.jpg" width="175" height="auto" alt="" style="display: block" /></td>
-							  <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><img src="image/chs_box_10.jpg" width="175" height="auto" alt="" style="display: block" /></td>
-							</tr>
+						    </tr>
 						  <tr>
 						    <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 								<tr>
 								  <td align="right" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_7.jpg" width="21" height="auto" alt="" style="display: block" /></td>
-									<td width="190" bgcolor="#db0011" align="center" valign="middle" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF"><strong>ÔNG PRAMOTH RAJENDRAN</strong></td>
+									<td width="200" bgcolor="#db0011" align="center" valign="middle" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF"><strong>BÀ VƯƠNG LỆ MINH</strong></td>
 								  <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_8.jpg" width="21" height="auto" alt="" style="display: block" /></td>
 								</tr>
 								</table></td>
-							  <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
-								<tr>
-								  <td align="right" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_7.jpg" width="21" height="auto" alt="" style="display: block" /></td>
-									<td width="190" bgcolor="#db0011" align="center" valign="middle" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF"><strong>ÔNG BROOK TAYLOR</strong></td>
-								  <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_8.jpg" width="21" height="auto" alt="" style="display: block" /></td>
-								</tr>
-								</table></td>
-					      </tr>
+						  </tr>
 						  <tr>
-							  <td align="center" valign="top" style="padding: 15px 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 14px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>Giám đốc toàn quốc<br />
-						      Khối Dịch vụ Quản lý Tài sản<br />
-và Tài chính Cá nhân, HSBC</strong></td>
-							  <td align="center" valign="top" style="padding: 15px 10px 0 10px; margin: 0; border: none; line-height: 1.3; font-size: 14px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>Tổng giám đốc<br />
-						      Công ty Cổ phần quản lý Quỹ,<br />
-						      VinaCapital</strong></td>
+							  <td align="center" valign="top" style="padding: 15px 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 14px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>Trưởng bộ phận chiến lược sản phẩm<br />
+Đầu tư và Bảo hiểm, HSBC</strong></td>
 						  </tr>
 						  </table></td>
                     </tr>
@@ -203,7 +191,7 @@ và Tài chính Cá nhân, HSBC</strong></td>
                       <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
                     </tr>
                     <tr>
-                      <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>17:45 - 18:25</strong></td>
+                      <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>17:35 - 18:05</strong></td>
                     </tr>
                     <tr>
                       <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Chia sẻ từ diễn giả</td>
@@ -283,7 +271,7 @@ VinaCapital<br />
                       <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
                     </tr>
                     <tr>
-                      <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>18:25 - 18:55</strong></td>
+                      <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>18:05 - 18:30</strong></td>
                     </tr>
                     <tr>
                       <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Hỏi đáp trực tiếp với diễn giả</td>
@@ -301,7 +289,7 @@ VinaCapital<br />
                       <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
                     </tr>
                     <tr>
-                      <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>19:00</strong></td>
+                      <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>18:30</strong></td>
                     </tr>
                     <tr>
                       <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Kết thúc hội thảo</td>
