--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -152,8 +152,7 @@
                       <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>17:30 - 17:35</strong></td>
                     </tr>
                     <tr>
-                      <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Khai mạc và phát biểu chào mừng từ đại diện<br />
-                      Ban Giám Đốc HSBC</td>
+                      <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Khai mạc và phát biểu chào mừng từ đại diện HSBC</td>
                     </tr>
                     <tr>
                       <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
