--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -121,7 +121,7 @@
                       <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
                     </tr>
                     <tr>
-                      <td align="left" style="padding: 0 0 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Thứ 5, ngày 01/12/2022, 17:30 - 18:30</td>
+                      <td align="left" style="padding: 0 0 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Thứ 7, ngày 10/12/2022, 10:00 - 11:00</td>
                     </tr>
                     <tr>
                       <td height="28" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
@@ -149,7 +149,7 @@
                       <td height="28" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;">&nbsp;</td>
                     </tr>
                     <tr>
-                      <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>17:30 - 17:35</strong></td>
+                      <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>10:00 - 10:05</strong></td>
                     </tr>
                     <tr>
                       <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Khai mạc và phát biểu chào mừng từ đại diện HSBC</td>
@@ -173,7 +173,8 @@
 						  </tr>
 						  <tr>
 							  <td align="center" valign="top" style="padding: 15px 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 14px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>Trưởng bộ phận chiến lược sản phẩm<br />
-Đầu tư và Bảo hiểm, HSBC</strong></td>
+Đầu tư và Tài khoản, Khối Dịch vụ Tài chính Cá nhân<br />
+và Quản lý Tài sản, HSBC</strong></td>
 						  </tr>
 						  </table></td>
                     </tr>
@@ -190,7 +191,7 @@
                       <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
                     </tr>
                     <tr>
-                      <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>17:35 - 18:05</strong></td>
+                      <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>10:05 - 10:35</strong></td>
                     </tr>
                     <tr>
                       <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Chia sẻ từ diễn giả</td>
@@ -209,7 +210,7 @@
 								  <td align="center" valign="top" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 								<tr>
 								  <td align="right" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_7.jpg" width="21" height="auto" alt="" style="display: block" /></td>
-									<td width="190" bgcolor="#db0011" align="center" valign="middle" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF"><strong>ÔNG NGÔ ĐĂNG KHOA</strong></td>
+									<td width="200" bgcolor="#db0011" align="center" valign="middle" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF"><strong>ÔNG ĐÀO NGỌC THẮNG</strong></td>
 								  <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_8.jpg" width="21" height="auto" alt="" style="display: block" /></td>
 								</tr>
 								</table></td>
@@ -234,9 +235,8 @@
 						  <tr>
 						    <td align="center" valign="top" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 								<tr>
-									<td align="center" valign="top" style="padding: 15px 10px 0 10px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong style="font-size: 14px">Giám đốc khối Ngoại hối,<br />
-Thị trường vốn và Dịch vụ<br />
-chứng khoán, HSBC</strong></td>
+									<td align="center" valign="top" style="padding: 15px 10px 0 10px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong style="font-size: 14px">Giám đốc khách hàng<br />
+								    doanh nghiệp, Khối Thị trường và Dịch vụ Chứng khoán, HSBC</strong></td>
 								</tr>
 								<tr>
 								  <td align="center" valign="top" style="padding: 8px 0 0 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Chia sẻ tổng quan tình hình kinh tế, đầu tư và chứng khoán tại Việt Nam, triển vọng 2023</td>
@@ -244,8 +244,7 @@ chứng khoán, HSBC</strong></td>
 								</table></td>
 						    <td align="center" valign="top" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 								<tr>
-									<td align="center" valign="top" style="padding: 15px 10px 0 10px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong style="font-size: 14px">Giám đốc Kinh doanh,<br />
-VinaCapital<br />
+									<td align="center" valign="top" style="padding: 15px 10px 0 10px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong style="font-size: 14px">Giám đốc Kinh doanh VinaCapital, khu vực miền Nam<br />
 &nbsp;</strong></td>
 								</tr>
 								<tr>
@@ -270,7 +269,7 @@ VinaCapital<br />
                       <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
                     </tr>
                     <tr>
-                      <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>18:05 - 18:30</strong></td>
+                      <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>10:35 - 11:00</strong></td>
                     </tr>
                     <tr>
                       <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Hỏi đáp trực tiếp với diễn giả</td>
@@ -288,7 +287,7 @@ VinaCapital<br />
                       <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
                     </tr>
                     <tr>
-                      <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>18:30</strong></td>
+                      <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>11:00</strong></td>
                     </tr>
                     <tr>
                       <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Kết thúc hội thảo</td>
