--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -333,7 +333,7 @@ và Quản lý Tài sản, HSBC</strong></td>
                       <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
                       <td valign="top" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><table border="0" cellpadding="0" cellspacing="0" class="chs_body">
 						  <tr>
-							  <td bgcolor="#db0011" style="padding: 10px 20px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><a href="https://hsbc.zoom.us/webinar/register/2716671902865/WN_4JNB6LO1Q_-LnxhAO-OFow" target="_blank" style="color: #FFFFFF; text-decoration: none;"><strong>Tham gia</strong></a></td>
+							  <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><a href="https://hsbc.zoom.us/webinar/register/2716671902865/WN_4JNB6LO1Q_-LnxhAO-OFow" target="_blank" style="color: #FFFFFF; text-decoration: none;"><img src="image/chs_box_10.png" width="150" height="auto" alt="" style="display: block" /></a></td>
 						  </tr>
 						  </table></td>
                       <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
